--- a/index.html
+++ b/index.html
@@ -3,41 +3,68 @@
 <meta charset="utf-8">
 <head>
     <title>생일을 축하해 꼬 ㅋㅋ</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="examples/examples.css" />
     <style type="text/css">
 
-
             /* Style for our header texts
-	* --------------------------------------- */
-        h1{
-            font-size: 4em;
-            font-family: arial,helvetica;
-            color: #000;
-            margin:0;
-            padding:0;
+            * --------------------------------------- */
+        h1, p, body {
+            font-family: 'Apple SD Gothic Neo', 'Open Sans','Malgun Gothic', arial,helvetica;
+            color:#fff;
         }
+        h1{
+            font-size: 5em;
+
+            color: #fff;
+            width:70%;
+            padding:30px 20px;
+            line-height: 110%;
+            margin:0 auto;
+
+        }
+
+        .intro { position: relative;}
+
 
             /* Centered texts in each section
             * --------------------------------------- */
         .section{
             text-align:center;
+            text-shadow:2px 2px #1C3160;
+            background-color:transparent; background-repeat: repeat-x; background-position: center center;
+            background-repeat: no-repeat; -moz-background-size: cover; -webkit-background-size: cover; background-size: cover;
         }
 
-        #section0,
-        #section1,
-        #section2,
-        #section3,
-        #section4,
-        #section5,
-        #section6
-        {
-            background-size: cover;
+
+        #section0{
+            background-image: url(imgs/desk.jpg);
+        }
+
+        #section1{
+            background-image: url(imgs/happybirthday.jpg);
+
+        }
+
+        #section2{
+            background-image: url(imgs/hawaii.jpg);
+        }
+
+        #section3{
+            background-image: url(imgs/eyes.jpg);
+        }
+
+        #section4{
+            background-image: url(imgs/bord.jpg);
         }
 
         #section5{
-            background-image: url(imgs/happybirthday.jpg);
-            padding: 20% 0 0 0;
+            background-image: url(imgs/positive.jpg);
+        }
+
+        #section6{
+            background-image: url(imgs/godd.jpg);
         }
 
     </style>
@@ -46,25 +73,47 @@
 
 <div id="fullpage">
     <div class="section" id="section0">
-        <h1>안녕 꼬 ~</h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>안녕 꼬 ~</h1>
+        </div>
     </div>
     <div class="section" id="section1">
-        <h1>하와이팀에 온지 꽤~~ 시간이 지났네? ㅎㅎ</h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>생일 축하해~ </h1>
+        </div>
     </div>
     <div class="section" id="section2">
-        <h1>개발자로써, 동료로써 성장하고 있는 모습이 참 뿌듯 *^^*</h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>하와이팀에 온지 꽤~시간이 지났네? ㅎㅎ</h1>
+        </div>
     </div>
+
     <div class="section" id="section3">
-        <h1>"뷰티데이" 에 깜놀하기도 했지만 ....</h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>"뷰티데이" 에 깜놀하기도 했지만 ....</h1>
+        </div>
     </div>
     <div class="section" id="section4">
-        <h1>짝꿍으로써 "긍정긍정"을 주는 꼬에게 항상 고마워</h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>개발자로써, 동료로써 성장하고 있는 모습이 참 뿌듯하네 *^^*</h1>
+        </div>
     </div>
     <div class="section" id="section5">
-        <h1>꼬 생일을 축하해~ </h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>짝꿍으로써 "긍정긍정"을 주는 꼬에게 항상 고마워</h1>
+        </div>
     </div>
     <div class="section" id="section6">
-        <h1>다음 생일까지 즐거운 일 짱짱 이길 바래~</h1>
+        <div style="position:absolute;top:0;left:0;width:100%;height:100%;background-color:black;opacity:0.4"></div>
+        <div class="intro">
+            <h1>다음 생일까지 즐거운 일 짱짱 이길 바래~</h1>
+        </div>
     </div>
 </div>
 
@@ -83,9 +132,15 @@
 <script type="text/javascript" src="jquery.fullPage.js"></script>
 
 <script type="text/javascript">
-
     $(document).ready(function() {
-        $('#fullpage').fullpage();
+        $('#fullpage').fullpage({
+            anchors: ['1', '2', '3', '4', '5', '6', '7', '8'],
+            navigation: true,
+            navigationPosition: 'right',
+            navigationTooltips: ['1', '2', '3', '4', '5', '6', '7', '8'],
+            slidesColor: ['white', 'white', 'black', 'white', 'black', 'black', 'black'],
+            scrollingSpeed: 500
+        });
     });
 </script>
 </body>
