더는 못하겠다.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
 
         #section1{
             background-image: url(imgs/happybirthday.jpg);
-
         }
 
         #section2{
             background-image: url(imgs/hawaii.jpg);
+        }
+
+        .section .intro{
+            padding: 0 0 35% 0;
         }
 
         #section3{
