--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="utf-8">
 <head>
+ <!-- 열어볼줄 알았음 ㅋㅋ 꼬는 역시나 개발자 ㅎㅎ  -->
     <title>생일을 축하해 꼬 ㅋㅋ</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
